# GMEXT-EpicOnlineServices

./: .gitignore  README.md  metadata.json
.github/ISSUE_TEMPLATE/: config.yml  extension_bug_report.yml  extension_docs_report.yml  feature-request.yml
docs/: External_Login_Flow_Guide.md  Logging_In.md  Setup.md  _Sidebar.md  achievements.js  auth.js  connect.js  data_storage.js  docs.js  ecom.js  extgen_docs.js  friends.js  general.js  leaderboards.js  lobbies.js  metrics.js  other.js  p2p.js  platform.js  player_data_storage.js  presence.js  progression_snapshot.js  rtc.js  sanctions.js  sessions.js  stats.js  title_storage.js  user_info.js  user_interface.js
source/: .gitignore  build_linux32.sh  build_linux64.sh
source/EOS_gml/: .gitignore  EpicOnlineServices.resource_order  EpicOnlineServices.yyp
source/EOS_gml/datafiles/: GMEXT-EpicOnlineServices.html
source/EOS_gml/extensions/EpicOnlineServices/: .gitignore  EpicOnlineServices.yy  libEpicOnlineServices.dylib  post_build_step.bat  post_build_step.sh
source/EOS_gml/extensions/EpicOnlineServices/source/: .gitignore  CMakeLists.txt  CMakePresets.json  config.json  extgen.schema.json  spec.gmidl
source/EOS_gml/extensions/EpicOnlineServices/source/.claude/: settings.local.json
source/EOS_gml/extensions/EpicOnlineServices/source/code_gen/android/: EpicOnlineServicesInternal_jni.cpp
source/EOS_gml/extensions/EpicOnlineServices/source/code_gen/core/: GMExtUtils.h  GMExtWire.h
source/EOS_gml/extensions/EpicOnlineServices/source/code_gen/ios/: EpicOnlineServicesInternal_ios.h  EpicOnlineServicesInternal_ios.mm
source/EOS_gml/extensions/EpicOnlineServices/source/code_gen/native/: EpicOnlineServicesInternal_exports.h  EpicOnlineServicesInternal_native.cpp  EpicOnlineServicesInternal_native.h
source/EOS_gml/extensions/EpicOnlineServices/source/src/: CMakeLists.txt
source/EOS_gml/extensions/EpicOnlineServices/source/src/ios/: EpicOnlineServices_ios.h  EpicOnlineServices_ios.mm
source/EOS_gml/extensions/EpicOnlineServices/source/src/native/: EpicOnlineServices_native.cpp  EpicOnlineServices_native.h  GMEpicGames.h  GMEpicGames_core.cpp  gm_eos_achievements.cpp  gm_eos_api.cpp  gm_eos_auth.cpp  gm_eos_connect.cpp  gm_eos_custominvites.cpp  gm_eos_ecom.cpp  gm_eos_friends.cpp  gm_eos_leaderboards.cpp  gm_eos_lobby.cpp  gm_eos_logging.cpp  gm_eos_metrics.cpp  gm_eos_p2p.cpp  gm_eos_platform.cpp  gm_eos_playerdatastorage.cpp  gm_eos_presence.cpp  gm_eos_progressionsnapshot.cpp  gm_eos_reports.cpp  gm_eos_rtc.cpp  gm_eos_rtc_data.cpp  gm_eos_sanctions.cpp  gm_eos_sessions.cpp  gm_eos_stats.cpp  gm_eos_titlestorage.cpp  gm_eos_ui.cpp  gm_eos_user_info.cpp
source/EOS_gml/fonts/Font_YoYo_15/: Font_YoYo_15.old.yy  Font_YoYo_15.yy
source/EOS_gml/fonts/Font_Yoyo_20/: Font_Yoyo_20.yy
source/EOS_gml/fonts/Font_Yoyo_30/: Font_Yoyo_30.yy
source/EOS_gml/fonts/Font_Yoyo_50/: Font_Yoyo_50.yy
source/EOS_gml/notes/changelog/: changelog.txt  changelog.yy
source/EOS_gml/objects/Obj_Button_GoTo/: Create_0.gml  Mouse_7.gml  Obj_Button_GoTo.yy
source/EOS_gml/objects/Obj_EpicGames_Achievement/: Alarm_0.gml  Create_0.gml  Draw_0.gml  Obj_EpicGames_Achievement.yy  Step_0.gml
source/EOS_gml/objects/Obj_EpicGames_Achievements_Controller/: Create_0.gml  Obj_EpicGames_Achievements_Controller.yy  Other_70.gml
source/EOS_gml/objects/Obj_EpicGames_Auth_Logout/: Mouse_4.gml  Obj_EpicGames_Auth_Logout.yy  Step_0.gml
source/EOS_gml/objects/Obj_EpicGames_Controller/: Alarm_0.gml  CleanUp_0.gml  Create_0.gml  Obj_EpicGames_Controller.yy  Other_63.gml  Other_70.gml  Step_0.gml
source/EOS_gml/objects/Obj_EpicGames_Ecom/: Create_0.gml  Obj_EpicGames_Ecom.yy  Other_70.gml
source/EOS_gml/objects/Obj_EpicGames_Ecom_Checkout/: Create_0.gml  Mouse_4.gml  Obj_EpicGames_Ecom_Checkout.yy  Step_0.gml
source/EOS_gml/objects/Obj_EpicGames_Ecom_Offer/: Create_0.gml  Draw_0.gml  Mouse_4.gml  Obj_EpicGames_Ecom_Offer.yy
source/EOS_gml/objects/Obj_EpicGames_Friend/: Alarm_0.gml  Create_0.gml  Draw_0.gml  Obj_EpicGames_Friend.yy  Other_70.gml
source/EOS_gml/objects/Obj_EpicGames_Friend_P2P/: Draw_0.gml  Mouse_4.gml  Obj_EpicGames_Friend_P2P.yy
source/EOS_gml/objects/Obj_EpicGames_Friends/: Create_0.gml  Draw_0.gml  Obj_EpicGames_Friends.yy  Other_70.gml
source/EOS_gml/objects/Obj_EpicGames_Friends_P2P/: Create_0.gml  Obj_EpicGames_Friends_P2P.yy  Other_70.gml
source/EOS_gml/objects/Obj_EpicGames_Leaderbaord_Definition/: Mouse_4.gml  Obj_EpicGames_Leaderbaord_Definition.yy
source/EOS_gml/objects/Obj_EpicGames_Leaderbaord_Rank/: Create_0.gml  Draw_0.gml  Obj_EpicGames_Leaderbaord_Rank.yy
source/EOS_gml/objects/Obj_EpicGames_Leaderboard_AddScore_1/: Create_0.gml  Mouse_4.gml  Obj_EpicGames_Leaderboard_AddScore_1.yy
source/EOS_gml/objects/Obj_EpicGames_Leaderboard_AddScore_2/: Create_0.gml  Mouse_4.gml  Obj_EpicGames_Leaderboard_AddScore_2.yy
source/EOS_gml/objects/Obj_EpicGames_Leaderboard_Definition/: Create_0.gml  Draw_0.gml  Mouse_4.gml  Obj_EpicGames_Leaderboard_Definition.yy
source/EOS_gml/objects/Obj_EpicGames_Leaderboard_Friends/: Create_0.gml  Mouse_4.gml  Obj_EpicGames_Leaderboard_Friends.yy  Other_70.gml
source/EOS_gml/objects/Obj_EpicGames_Leaderboard_Rank/: Create_0.gml  Draw_0.gml  Obj_EpicGames_Leaderboard_Rank.yy
source/EOS_gml/objects/Obj_EpicGames_Leaderboard_Rank_Friend/: Alarm_0.gml  Create_0.gml  Obj_EpicGames_Leaderboard_Rank_Friend.yy  (+1 more)
source/EOS_vs/EpicOnlineServices/: EpicOnlineServices.vcxproj  EpicOnlineServices.vcxproj.filters  Extension_Interface.h  YYEOS.cpp  YYEOS_Achievements.cpp  YYEOS_Auth.cpp  YYEOS_Connect.cpp  YYEOS_Ecom.cpp  YYEOS_Friends.cpp  YYEOS_Leaderboards.cpp  YYEOS_Lobbies.cpp  YYEOS_Metrics.cpp  YYEOS_P2P.cpp  YYEOS_Platform.cpp  YYEOS_PlayerDataStorage.cpp  YYEOS_Presence.cpp  YYEOS_ProgressionSnapshot.cpp  YYEOS_Reports.cpp  YYEOS_Sanctions.cpp  YYEOS_Sessions.cpp  YYEOS_Stats.cpp  YYEOS_TitleStorage.cpp  YYEOS_UI.cpp  YYEOS_UserInfo.cpp  YYEpicOnlineServices.h  dllmain.cpp  pch.h
source/EOS_xcode/EpicOnlineServices.xcodeproj/: project.pbxproj
templates/: release_body.md
(+556 files in other folders)
